rajout des joueurs

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap");
-body {
+p {
   font-family: "Luckiest Guy", cursive;
+  font-size: 30px;
 }
 
 table {
@@ -19,14 +20,20 @@ td:hover {
 }
 
 #game {
-  margin-top: 35px;
+  margin-top: 25px;
 }
 
 .player-1 {
-  height: 50px;
-  width: 50px;
+  height: 200px;
+  width: 300px;
   background-color: blue;
   border-radius: 25px;
+}
+
+.joueur {
+  font-size: 15px;
+  color: white;
+  padding-top: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
