--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap");
+body {
+  background-color: #4791FF !important;
+}
+
 p {
   font-family: "Luckiest Guy", cursive;
-  font-size: 30px;
+  font-size: 40px;
+  color: #FFC107;
 }
 
 table {
@@ -20,7 +25,7 @@ td:hover {
 }
 
 #game {
-  margin-top: 25px;
+  margin-top: 10px;
 }
 
 .player-1 {
