--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,33 @@
-@import url("https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap");
-p {
-  font-family: "Luckiest Guy", cursive;
-  font-size: 30px;
+/* BOUNCING TEXT EFFECT */
+.animated-bounce {
+  -webkit-animation-duration: 1.5s;
+  -webkit-animation-name: bounce;
+  animation-name: bounce;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
 }
 
-table {
-  margin: 0 auto;
+@-webkit-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-20px);
+  }
+  60% {
+    -webkit-transform: translateY(-10px);
+  }
 }
-
-td {
-  background-color: blue;
-  height: 100px;
-  width: 100px;
-  border-radius: 50%;
-}
-
-td:hover {
-  opacity: 0.5;
-}
-
-#game {
-  margin-top: 25px;
-}
-
-.player-1 {
-  height: 200px;
-  width: 300px;
-  background-color: blue;
-  border-radius: 25px;
-}
-
-.joueur {
-  font-size: 15px;
-  color: white;
-  padding-top: 20px;
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
