--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -1,2 +1,13 @@
-// FONT IMPORT
+/* FONT IMPORT */
+
 @import url('https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap');
+
+/* BACKGROUND SYSTEM */
+
+.bg-light-dark{
+    background-color: #343a40c7;
+}
+.bg-jv{
+    background-image: url("../media/bg-jv.png");
+    background-repeat: repeat;
+}
