--- a/css/style.css
+++ b/css/style.css
@@ -3,66 +3,11 @@ body {
   background-color: #4791FF !important;
 }
 
-p {
+.go {
   font-family: "Luckiest Guy", cursive;
-  font-size: 40px;
+  font-size: 60px;
   color: #FFC107;
-}
-
-P span {
-  position: relative;
-  top: 20px;
-  display: inline-block;
-  -webkit-animation: bounce 0.3s ease infinite alternate;
-  font-size: 80px;
-  color: #fff;
-  text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc, 0 5px 0 #ccc, 0 6px 0 transparent, 0 7px 0 transparent, 0 8px 0 transparent, 0 9px 0 transparent, 0 10px 10px rgba(0, 0, 0, 0.4);
-  /* ANIMATION */
-}
-P span h1 span:nth-child(2) {
-  -webkit-animation-delay: 0.1s;
-}
-P span h1 span:nth-child(3) {
-  -webkit-animation-delay: 0.2s;
-}
-P span h1 span:nth-child(4) {
-  -webkit-animation-delay: 0.3s;
-}
-P span h1 span:nth-child(5) {
-  -webkit-animation-delay: 0.4s;
-}
-P span h1 span:nth-child(6) {
-  -webkit-animation-delay: 0.5s;
-}
-P span h1 span:nth-child(7) {
-  -webkit-animation-delay: 0.6s;
-}
-P span h1 span:nth-child(8) {
-  -webkit-animation-delay: 0.2s;
-}
-P span h1 span:nth-child(9) {
-  -webkit-animation-delay: 0.3s;
-}
-P span h1 span:nth-child(10) {
-  -webkit-animation-delay: 0.4s;
-}
-P span h1 span:nth-child(11) {
-  -webkit-animation-delay: 0.5s;
-}
-P span h1 span:nth-child(12) {
-  -webkit-animation-delay: 0.6s;
-}
-P span h1 span:nth-child(13) {
-  -webkit-animation-delay: 0.7s;
-}
-P span h1 span:nth-child(14) {
-  -webkit-animation-delay: 0.8s;
-}
-@-webkit-keyframes bounce {
-  100% {
-    top: -20px;
-    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc, 0 5px 0 #ccc, 0 6px 0 #ccc, 0 7px 0 #ccc, 0 8px 0 #ccc, 0 9px 0 #ccc, 0 50px 25px rgba(0, 0, 0, 0.2);
-  }
+  text-shadow: 2px 2px orangered;
 }
 
 table {
@@ -71,8 +16,8 @@ table {
 
 td {
   background-color: blue;
-  height: 100px;
-  width: 100px;
+  height: 70px;
+  width: 70px;
   border-radius: 50%;
 }
 
@@ -92,9 +37,27 @@ td:hover {
 }
 
 .joueur {
+  font-family: "Luckiest Guy", cursive;
   font-size: 15px;
   color: white;
   padding-top: 20px;
+}
+
+.btn {
+  background-color: #FFC107 !important;
+  box-shadow: 2px 2px orangered !important;
+}
+
+.round-white {
+  background-color: white;
+}
+
+.red {
+  background-color: red !important;
+}
+
+.yellow {
+  background-color: yellow;
 }
 
 /* BOUNCING TEXT EFFECT */
