Changement de classe btn

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ td:hover {
   padding-top: 20px;
 }
 
-.btn {
+.btn-go {
   background-color: #FFC107 !important;
   box-shadow: 2px 2px orangered !important;
 }
