--- a/scss/_tableau.scss
+++ b/scss/_tableau.scss
@@ -37,7 +37,7 @@ td:hover{
     color: white;
     padding-top: 20px;
 }
-.btn{
+.btn-go{
     background-color: #FFC107 !important;
     box-shadow: 2px 2px orangered !important;
 
