--- a/scss/_tableau.scss
+++ b/scss/_tableau.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap');
+
 body{
     background-color:  #4791FF!important;
     
@@ -7,7 +9,7 @@ body{
     font-size: 60px;
     color: #FFC107;
     text-shadow: 2px 2px orangered;
-
+    padding-top: 60px;
 }
 
 table{
@@ -25,22 +27,38 @@ td:hover{
 #game{
     margin-top: 10px;
 }
-.player-1{
-    height: 200px;
-    width: 300px;
-    background-color: blue;
+.player{
+    height: 100px;
+    width: 100px;
+    background-color: orangered;
     border-radius: 25px;
+    box-shadow: 2px 4px rgba(27, 27, 27, 0.267) !important;
 }
 .joueur{
     font-family: 'Luckiest Guy', cursive;
-    font-size: 15px;
+    font-size: 25px;
     color: white;
     padding-top: 20px;
 }
+.joueur1{
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 25px;
+    color: white;
+    padding-top: 20px;
+}
+.joueur2{
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 25px;
+    color: white;
+    padding-top: 20px;
+    
+}
 .btn-go{
     background-color: #FFC107 !important;
-    box-shadow: 2px 2px orangered !important;
-
+    box-shadow: 2px 2px rgba(27, 27, 27, 0.267) !important;
+    border-radius: 15px;
+    width: 100px;
+    margin-top: 50px;
 }
 .round-white {
     background-color: white;
