--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,14 @@ td:hover {
   box-shadow: 2px 4px rgba(27, 27, 27, 0.267) !important;
 }
 
+.resulj1 {
+  font-family: "Luckiest Guy";
+}
+
+.resulj2 {
+  font-family: "Luckiest Guy";
+}
+
 .joueur {
   font-family: "Luckiest Guy", cursive;
   font-size: 25px;
@@ -134,6 +142,14 @@ td:hover {
   .joueur {
     font-size: 1.3rem;
     padding-top: 20px;
+  }
+
+  .resulj1 {
+    display: none;
+  }
+
+  .resulj2 {
+    display: none;
   }
 }
 /* BOUNCING TEXT EFFECT */
